paid/force-app/main/default/objects/Paid_Credit_Note__c/Paid_Credit_Note__c.object-meta.xml
<CustomObject>
    <label>Paid Credit Note</label>
    <nameField>
        <label>Paid Credit Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Credit Note</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>