paid/force-app/main/default/objects/Paid_Credit_Note__c/fields/Paid_Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Paid_Base_Currency__c</fullName>
    <label>Paid Base Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>