paid/force-app/main/default/objects/Paid_Credit_Note__c/fields/Paid_Credit_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Credit_Note_Date__c</fullName>
    <label>Paid Credit Note Date</label>
    <type>Date</type>
</CustomField>