paid/force-app/main/default/objects/Paid_Credit_Note__c/fields/Paid_Credit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Credit_Note_Number__c</fullName>
    <displayFormat>CN-{0000}</displayFormat>
    <label>Paid Credit Note Number</label>
    <type>AutoNumber</type>
</CustomField>