paid/force-app/main/default/objects/Paid_Credit_Note__c/fields/Paid_Credit_Note_Source_Action__c.field-meta.xml
<CustomField>
    <fullName>Paid_Credit_Note_Source_Action__c</fullName>
    <label>Paid Credit Note Source Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel &amp; Rebill</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Invoice Line Credit</fullName>
            </value>
            <value>
                <fullName>Negative Lines Conversion</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>