paid/force-app/main/default/objects/Paid_Credit_Note__c/fields/Paid_Estimate_Tax_Process_Time__c.field-meta.xml
<CustomField>
    <fullName>Paid_Estimate_Tax_Process_Time__c</fullName>
    <label>Paid Estimate Tax Process Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>