paid/force-app/main/default/objects/Paid_Credit_Note__c/fields/Paid_Tax_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Street_1__c</fullName>
    <label>Paid Tax Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>